@@ -91,6 +91,10 @@ void EvtDalitzTable::readXMLDecayFile(const std::string dec_name, bool verbose){
   EvtSpinType::spintype spinType(EvtSpinType::SCALAR);
   double mass(0.), width(0.), FFp(0.), FFr(0.);
   std::vector<EvtFlatteParam> flatteParams;
+  //Nonres parameters
+  double alpha(0.);
+  //LASS parameters
+  double aLass(0.), rLass(0.), BLass(0.), phiBLass(0.), RLass(0.), phiRLass(0.);
 
   EvtParserXml parser;
   parser.open(dec_name);
@@ -251,6 +255,19 @@ void EvtDalitzTable::readXMLDecayFile(const std::string dec_name, bool verbose){
         FFp = parser.readAttributeDouble("BlattWeisskopfFactorParent",0.0);
         FFr = parser.readAttributeDouble("BlattWeisskopfFactorResonance",1.5);
 
+        //Shape specific attributes
+        if(shape=="NonRes_Exp") {
+          alpha = parser.readAttributeDouble("alpha",0.0);
+        }
+        if(shape=="LASS") {
+          aLass = parser.readAttributeDouble("a",0.0);
+          rLass = parser.readAttributeDouble("r",0.0);
+          BLass = parser.readAttributeDouble("B",0.0);
+          phiBLass = parser.readAttributeDouble("phiB",0.0);
+          RLass = parser.readAttributeDouble("R",0.0);
+          phiRLass = parser.readAttributeDouble("phiR",0.0);
+        }
+
         //Daughter pairs for resonance
         angAndResPairs.clear();
 
@@ -300,7 +317,7 @@ void EvtDalitzTable::readXMLDecayFile(const std::string dec_name, bool verbose){
           std::vector< std::pair<EvtCyclic3::Pair,EvtCyclic3::Pair> >::iterator it = angAndResPairs.begin();
           for( ; it != angAndResPairs.end(); it++) {
             std::pair<EvtCyclic3::Pair,EvtCyclic3::Pair> pairs = *it;
-            EvtDalitzReso resonance = getResonance(shape, dp, pairs.first, pairs.second, spinType, mass, width, FFp, FFr);
+            EvtDalitzReso resonance = getResonance(shape, dp, pairs.first, pairs.second, spinType, mass, width, FFp, FFr, alpha, aLass, rLass, BLass, phiBLass, RLass, phiRLass);
             dalitzDecay->addResonance(cAmp,resonance);
           }
         }
@@ -330,7 +347,7 @@ void EvtDalitzTable::readXMLDecayFile(const std::string dec_name, bool verbose){
         std::vector< std::pair<EvtCyclic3::Pair,EvtCyclic3::Pair> >::iterator it = angAndResPairs.begin();
         for( ; it != angAndResPairs.end(); it++) {
           std::pair<EvtCyclic3::Pair,EvtCyclic3::Pair> pairs = *it;
-          EvtDalitzReso resonance = getResonance(shape, dp, pairs.first, pairs.second, spinType, mass, width, FFp, FFr);
+          EvtDalitzReso resonance = getResonance(shape, dp, pairs.first, pairs.second, spinType, mass, width, FFp, FFr, alpha, aLass, rLass, BLass, phiBLass, RLass, phiRLass);
 
           std::vector<EvtFlatteParam>::iterator flatteIt = flatteParams.begin();
           for( ; flatteIt != flatteParams.end(); flatteIt++) {
@@ -412,15 +429,22 @@ std::vector<EvtDalitzDecayInfo> EvtDalitzTable::getDalitzTable(const EvtId& pare
 
 
 EvtDalitzReso EvtDalitzTable::getResonance(std::string shape, EvtDalitzPlot dp, EvtCyclic3::Pair angPair, EvtCyclic3::Pair resPair,
-                                           EvtSpinType::spintype spinType, double mass, double width, double FFp, double FFr) {
+                                           EvtSpinType::spintype spinType, double mass, double width, double FFp, double FFr, double alpha,
+                                           double aLass, double rLass, double BLass, double phiBLass, double RLass, double phiRLass) {
   if( shape=="RBW" || shape=="RBW_CLEO") {
     return EvtDalitzReso( dp, angPair, resPair, spinType, mass, width, EvtDalitzReso::RBW_CLEO, FFp, FFr );
   } else if( shape=="RBW_CLEO_ZEMACH" ) {
     return EvtDalitzReso( dp, angPair, resPair, spinType, mass, width, EvtDalitzReso::RBW_CLEO_ZEMACH, FFp, FFr );
-  }else if( shape=="Flatte" ) {
+  } else if( shape=="Flatte" ) {
     return EvtDalitzReso( dp, resPair, mass );
+  } else if( shape=="LASS" ) {
+    return EvtDalitzReso( dp, resPair, mass, width, aLass, rLass, BLass, phiBLass, RLass, phiRLass );
   } else if( shape=="NonRes" ) {
     return EvtDalitzReso( );
+  } else if( shape=="NonRes_Linear" ) {
+    return EvtDalitzReso( dp, resPair, EvtDalitzReso::NON_RES_LIN );
+  } else if( shape=="NonRes_Exp" ) {
+    return EvtDalitzReso( dp, resPair, EvtDalitzReso::NON_RES_EXP, alpha );
   } else { //NBW
     return EvtDalitzReso( dp, angPair, resPair, spinType, mass, width, EvtDalitzReso::NBW, FFp, FFr );
   }
